--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   },
   "dependencies": {
     "bindings": "^1.3.0",
-    "bufio": "^0.0.1",
     "nan": "^2.7.0"
   },
   "devDependencies": {
@@ -38,7 +37,8 @@
     "mocha": "^4.0.1",
     "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
     "uglify-es": "^3.1.3",
-    "webpack": "^3.8.1"
+    "webpack": "^3.8.1",
+    "bufio": "^0.0.1"
   },
   "engines": {
     "node": ">=7.6.0"
