--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nan": "^2.7.0"
   },
   "devDependencies": {
+    "bufio": "github:tuxcanfly/bufio",
     "babelify": "^7.3.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -37,8 +38,7 @@
     "mocha": "^4.0.1",
     "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
     "uglify-es": "^3.1.3",
-    "webpack": "^3.8.1",
-    "bufio": "^0.0.1"
+    "webpack": "^3.8.1"
   },
   "engines": {
     "node": ">=7.6.0"
